--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Version 3.2.3
+~~~~~~~~~~~~~
+Released: 2011-03-18
+
+* Bugfix:
+ - Allow the calibration to ask more than one interaction question (Richard Hughes)
+ - Connect to GSD to change the brightness, not GPM (Richard Hughes)
+ - Correctly spawn profiles with spaces in the filename when using gcm-import (Richard Hughes)
+ - Ensure the sensor is unlocked after failing to get a sample in gcm-picker (Richard Hughes)
+ - Ensure the user can quit if the calibration fails (Richard Hughes)
+ - Ensure the VTE is flushed when the spawned program exits (Richard Hughes)
+ - Fix compile with newer versions of clutter (Richard Hughes)
+ - Limit display profiles to Single shaper matrix, to keep greyscale neutral (Pascal de Bruijn)
+ - Remove the final vestiges of gcm-session (Richard Hughes)
+
 Version 3.2.2
 ~~~~~~~~~~~~~
 Released: 2011-01-09
