--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Version 3.4.0
+~~~~~~~~~~~~~
+Released: 2012-03-26
+
+* Translations
+ - Updated Galician translations (Fran Diéguez)
+ - Updated Latvian translation (Rudolfs Mazurs)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Russian translation (Alexandre Prokoudine)
+
+* New Features:
+ - Add an environment variable of ENABLE_COLORHUG=1 for ArgyllCMS V1.3.6 (Richard Hughes)
+
+* Bugfix:
+ - Optimize printer target patch count for ColorMunki & A4/Letter paper (Pascal de Bruijn)
+
 Version 3.3.91
 ~~~~~~~~~~~~~
 Released: 2012-03-14
