--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Version 3.2.4
+~~~~~~~~~~~~~
+Released: 2012-05-10
+
+* Translations
+ - Updated French translation (Bruno Brouard)
+
+* Bugfix:
+ - Hide the target whitepoint screen for colorimeters (Richard Hughes)
+ - Set ENABLE_COLORHUG=1 for ArgyllCMS V1.3.6 (Richard Hughes)
+ - Show the profile folder after calibration for a LiveCD (Richard Hughes)
+
 Version 3.2.3
 ~~~~~~~~~~~~~
 Released: 2011-03-18
