--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,31 @@
+Version 3.5.1
+~~~~~~~~~~~~~
+Released: 2012-05-14
+
+* Translations
+ - Added German doc translation (Mario Blättermann)
+ - Added Persian translation (narcissus)
+ - Updated French translation (Alexandre Franke)
+ - Updated French translation (Bruno Brouard)
+ - Updated Galician translations (Fran Diéguez)
+ - Updated Greek translation (Kostas Papadimas)
+ - Updated Hungarian translation (Gabor Kelemen)
+ - Updated Slovenian translation (Matej Urbančič)
+ - Updated Spanish translation (Daniel Mustieles)
+ - Updated Spanish translation (Radina Matic)
+
+* New Features:
+ - Explain how to use the ICC profiles on other systems (Richard Hughes)
+ - Set the 'remote-profile-hash' sensor option when calibration has completed (Richard Hughes)
+ - When using a LiveCD, have a button the user can click on to show the icc profile (Richard Hughes)
+
+* Bugfix:
+ - Allow the user to select a CIE file when looking for chart values (Richard Hughes)
+ - Don't ask the user to choose a CIE reference when one cannot exist (Richard Hughes)
+ - Hide the target whitepoint selection screen if the sensor is a colorimeter (Richard Hughes)
+ - Remove gcm-calibrate-helper as it's now unused (Richard Hughes)
+ - Use CdSampleWindow from libcolord-gtk rather than our own copy (Richard Hughes)
+
 Version 3.4.0
 ~~~~~~~~~~~~~
 Released: 2012-03-26
