--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Version 3.4.2
+~~~~~~~~~~~~~
+Released: 2012-05-14
+
+* Translations
+ - Updated French translation (Bruno Brouard)
+
+* New Features:
+ - Show the actual ICC profile after calibration if the user is using a LiveCD (Richard Hughes)
+
+* Bugfix:
+ - Hide the target whitepoint selection screen if the sensor is a colorimeter (Richard Hughes)
+
 Version 3.4.0
 ~~~~~~~~~~~~~
 Released: 2012-03-26
