--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+Version 3.5.3
+~~~~~~~~~~~~~
+Released: 2012-06-26
+
+* Translations
+ - Updated German translation (Christian Kirbach)
+ - Updated Greek translation (Tom Tryfonidis)
+ - Updated Hebrew translation (Yaron Shahrabani)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Punjabi Translation (A S Alam)
+
+* Bugfix:
+ - Add some checks to prevent gcm-picker crashing (Richard Hughes)
+ - Change display profiles to single gamma (Pascal de Bruijn)
+ - Don't emit a two critical warnings when calibrating a printer (Richard Hughes)
+ - Don't hardcode the AdobeRGB profile (Richard Hughes)
+ - Ensure the print profile mode is set in the calibration dialog (Richard Hughes)
+ - Fix up tooltip strings (Piotr Drąg)
+
 Version 3.5.1
 ~~~~~~~~~~~~~
 Released: 2012-05-14
