Updated German help translation

--- a/help/de/de.po
+++ b/help/de/de.po
@@ -2,18 +2,22 @@
 # Copyright (C) 2012 gnome-color-manager's COPYRIGHT HOLDER
 # This file is distributed under the same license as the gnome-color-manager package.
 # Mario Blättermann <mario.blaettermann@gmail.com>, 2012.
+# Tobias Endrigkeit <tobiasendrigkeit@googlemail.com>, 2012.
+# Christian Kirbach <Christian.Kirbach@googlemail.com>, 2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master docs\n"
-"POT-Creation-Date: 2012-05-04 13:33+0000\n"
-"PO-Revision-Date: 2012-05-06 17:37+0100\n"
-"Last-Translator: Mario Blättermann <mario.blaettermann@gmail.com>\n"
-"Language-Team: German <gnome-de@gnome.org>\n"
+"POT-Creation-Date: 2012-07-01 08:31+0000\n"
+"PO-Revision-Date: 2012-07-06 15:52+0200\n"
+"Last-Translator: Tobias Endrigkeit <tobiasendrigkeit@googlemail.com>\n"
+"Language-Team: Deutsch <gnome-de@gnome.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Gtranslator 2.91.5\n"
 
 #: C/legal.xml:3(p/link)
 msgid "Creative Commons Attribution-ShareAlike 3.0 Unported License"
@@ -44,10 +48,10 @@ msgstr "Ein ICC-Profil unter Linux importieren"
 
 #: C/color-import-linux.page:18(page/p)
 msgid ""
-"If you have <cmd>gnome-color-manager</cmd> or <cmd>colord-kde</cmd> installed "
-"then just double click the <file>.icc</file> profile and click <gui>Import</"
-"gui>. You can then assign the new profile to an existing device using the "
-"<guiseq><gui>System Settings</gui><gui>Color</gui></guiseq> panel."
+"If you have <cmd>gnome-color-manager</cmd> or <cmd>colord-kde</cmd> "
+"installed then just double click the <file>.icc</file> profile and click "
+"<gui>Import</gui>. You can then assign the new profile to an existing device "
+"using the <guiseq><gui>System Settings</gui><gui>Color</gui></guiseq> panel."
 msgstr ""
 "Falls <cmd>gnome-color-manager</cmd> oder <cmd>colord-kde</cmd> installiert "
 "sind, dann klicken Sie doppelt auf das <file>.icc</file>-Profil und "
@@ -58,8 +62,8 @@ msgstr ""
 #: C/color-import-linux.page:25(page/p)
 msgid ""
 "Profile calibration curves are automatically loaded at login, or can be "
-"loaded for all users at startup if the <gui>Set for all users</gui> button is "
-"clicked."
+"loaded for all users at startup if the <gui>Set for all users</gui> button "
+"is clicked."
 msgstr ""
 "Die Kalibrierungskurven des Profils werden bei der Anmeldung automatisch "
 "geladen. Alternativ können sie für alle Benutzer beim Start geladen werden, "
@@ -89,11 +93,12 @@ msgstr "Windows XP"
 #: C/color-import-windows.page:25(section/p)
 msgid ""
 "Right click on the profile in Windows Explorer and click <gui>Install "
-"profile</gui>. This copies the profile to the correct directory automatically."
+"profile</gui>. This copies the profile to the correct directory "
+"automatically."
 msgstr ""
 "Klicken Sie mit der rechten Maustaste auf das Profil im Windows Explorer und "
-"klicken Sie anschließend auf <gui>Profil installieren</gui>. Dadurch wird das "
-"Profil automatisch in den richtigen Ordner kopiert."
+"klicken Sie anschließend auf <gui>Profil installieren</gui>. Dadurch wird "
+"das Profil automatisch in den richtigen Ordner kopiert."
 
 #: C/color-import-windows.page:29(section/p)
 msgid ""
@@ -111,9 +116,9 @@ msgid ""
 "replaced."
 msgstr ""
 "Falls Sie unter Windows XP ein bestehendes Profil ersetzen, funktioniert der "
-"vorstehend beschriebene Schnellzugriff nicht. Die Profile müssen manuell nach "
-"<file>C:\\Windows\\system32\\spool\\drivers\\color</file> kopiert werden, um "
-"das Originalprofil zu ersetzen."
+"vorstehend beschriebene Schnellzugriff nicht. Die Profile müssen manuell "
+"nach <file>C:\\Windows\\system32\\spool\\drivers\\color</file> kopiert "
+"werden, um das Originalprofil zu ersetzen."
 
 #: C/color-import-windows.page:42(section/p)
 msgid ""
@@ -129,8 +134,8 @@ msgstr ""
 "die Kalibrierungskurven des Profils in die Grafikkarte zu kopieren. Dies "
 "können Programme wie <app>Adobe Gamma</app>, <app>LUT Loader</app> oder das "
 "kostenlose <app href=\"https://www.microsoft.com/download/en/details.aspx?"
-"displaylang=en&amp;id=12714\">Microsoft Color Control Panel Applet</app>. Mit "
-"letzterem fügen Sie ein neues Objekt <gui>Farbe</gui> zu den "
+"displaylang=en&amp;id=12714\">Microsoft Color Control Panel Applet</app>. "
+"Mit letzterem fügen Sie ein neues Objekt <gui>Farbe</gui> zu den "
 "Systemeinstellungen hinzu, welches die einfache Zuordnung der beim Start zu "
 "ladenden Kalibrierungskurven ermöglicht."
 
@@ -146,6 +151,12 @@ msgid ""
 "are using profiles with embedded calibration curves you have to be very "
 "careful the calibration state has not been cleared."
 msgstr ""
+"Microsoft Windows Vista löscht fehlerhafterweise die Kalibrierungskurve aus "
+"der Video-LUT nach dem Anmelden, der Bereitschaft oder wenn das UAC-Fenster "
+"erscheint. Dies bedeutet, dass Sie möglicherweise das ICC-Profil der "
+"Kalibrierungskurve aktualisieren müssen. Wenn Sie Profile mit eingebetteten "
+"Kalibrierungskurven nutzen, müssen Sie sehr vorsichtig sein, weil der "
+"Kalibrierungsstatus nicht bereinigt wurde."
 
 #: C/color-import-windows.page:68(section/title)
 msgid "Windows 7"
@@ -154,28 +165,48 @@ msgstr "Windows 7"
 #: C/color-import-windows.page:69(section/p)
 msgid ""
 "Windows 7 supports a similar scheme to Linux, in that profiles can be "
-"installed system-wide or specific to the user. They are however stored in the "
-"same place. Right click on the profile in Windows Explorer and click "
+"installed system-wide or specific to the user. They are however stored in "
+"the same place. Right click on the profile in Windows Explorer and click "
 "<gui>Install profile</gui> or copy the .icc profile to <file>C:\\Windows"
 "\\system32\\spool\\drivers\\color</file>."
 msgstr ""
+"Windows 7 unterstützt eine ähnliches Schema wie Linux, sodass die "
+"Möglichkeit besteht, Profile systemweit oder für einen bestimmten Benutzer "
+"zu installieren. Diese werden dabei an der gleichen Stelle abgespeichert. "
+"Klicken Sie dazu mit der rechten Maustaste auf ein Profil im Windows "
+"Explorer und klicken Sie auf <gui>Profil installieren</gui> oder kopieren "
+"Sie die .icc-Profile nach <file>C:\\Windows\\system32\\spool\\drivers"
+"\\color</file>."
 
 #: C/color-import-windows.page:76(section/p)
 msgid ""
 "Open <guiseq><gui>Control Center</gui><gui>Color Management</gui></guiseq> "
-"and then add the profile to the system by clicking the <gui>Add</gui> button. "
-"Click on the <gui>Advanced</gui> tab and look for <gui>Display Calibration</"
-"gui>. Calibration curve loading is enabled by the <gui>Use Windows display "
-"calibration</gui> checkbox but it is not sensitive. This can be enabled by "
-"clicking on <gui>Change system defaults</gui> and then returning to the "
-"<gui>Advanced</gui> tab and then clicking the checkbox."
+"and then add the profile to the system by clicking the <gui>Add</gui> "
+"button. Click on the <gui>Advanced</gui> tab and look for <gui>Display "
+"Calibration</gui>. Calibration curve loading is enabled by the <gui>Use "
+"Windows display calibration</gui> checkbox but it is not sensitive. This can "
+"be enabled by clicking on <gui>Change system defaults</gui> and then "
+"returning to the <gui>Advanced</gui> tab and then clicking the checkbox."
 msgstr ""
+"Öffnen Sie <guiseq><gui>Kontrollzentrum</gui><gui>Farbeinstellung</gui></"
+"guiseq> und fügen Sie das Profil zum System hinzu, indem Sie auf "
+"<gui>Hinzufügen</gui> klicken. Klicken Sie auf den "
+"Reiter<gui>Fortgeschritten</gui> und suchen Sie nach "
+"<gui>Bildschirmkalibrierung</gui>. Das Laden der Kalibrierungskurve "
+"aktivieren Sie durch das Ankreuzfeld <gui>Windows Bildschirmkalibrierung "
+"benutzen</gui>. Dies können Sie aktivieren, indem sie auf <gui>Systemvorgabe "
+"ändern</gui> klicken und zum Reiter <gui>Fortgeschritten</gui> zurückkehren "
+"und auf das Ankreuzfeld klicken."
 
 #: C/color-import-windows.page:87(section/p)
 msgid ""
 "Close the dialog and click <gui>Reload current calibrations</gui> to set the "
 "gamma ramps. The profile calibration curves should now be set for every boot."
 msgstr ""
+"Schließen Sie den Dialog und klicken Sie auf <gui>Aktuelle "
+"Kalibrierungskurven aktualisieren</gui>, um die Gamma-Rampen einzustellen. "
+"Die Profilkalibrierungskurve sollte nun für jeden Systemstart eingestellt "
+"sein."
 
 #: C/color-import-osx.page:9(info/desc)
 msgid "How to import an existing ICC profile using an OS X system."
@@ -189,9 +220,14 @@ msgstr "Ein ICC-Profil unter Apple OS X importieren"
 msgid ""
 "Apple OS X supports a similar scheme to Linux, in that profiles can be "
 "installed system-wide or specific to the user. System wide profiles are "
-"stored in <file>/Library/ColorSync/Profiles</file> and user-specific profiles "
-"are stored in <file>~/Library/ColorSync/Profiles</file>."
+"stored in <file>/Library/ColorSync/Profiles</file> and user-specific "
+"profiles are stored in <file>~/Library/ColorSync/Profiles</file>."
 msgstr ""
+"Apple OS X unterstützt ein ähnliches Schema wie Linux, sodass die "
+"Möglichkeit besteht, Profile systemweit oder für einen bestimmten Benutzer "
+"zu installieren. Systemweite Profile werden in <file>/Library/ColorSync/"
+"Profiles</file> und benutzerspezifische Profile in <file>~/Library/ColorSync/"
+"Profiles</file>."
 
 #: C/color-import-osx.page:24(page/p)
 msgid ""
@@ -199,3 +235,6 @@ msgid ""
 "gui></guiseq> tool to import the file and assign the profile to the correct "
 "device."
 msgstr ""
+"Benutzen Sie das Werkzeug <guiseq><gui>Systemeinstellungen</"
+"gui><gui>Bildschirme</gui><gui>Farbe</gui></guiseq>, um Dateien zu "
+"importieren und das Profil dem korrekten Gerät zuzuteilen."
