Updated Norwegian bokmål translation

--- a/po/nb.po
+++ b/po/nb.po
@@ -5,10 +5,10 @@
 # Torstein Adolf Winterseth <kvikende@fsfe.org>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gnome-color-manager 3.3.x\n"
+"Project-Id-Version: gnome-color-manager 3.5.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-30 13:40+0200\n"
-"PO-Revision-Date: 2012-05-30 13:45+0200\n"
+"POT-Creation-Date: 2012-07-09 14:41+0200\n"
+"PO-Revision-Date: 2012-07-09 14:44+0200\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
@@ -212,7 +212,7 @@ msgstr "TRC"
 
 #: ../data/gcm-viewer.ui.h:37
 msgid "Video card out"
-msgstr ""
+msgstr "Bildeutgang"
 
 #: ../data/gcm-viewer.ui.h:38
 msgid "A video card gamma table shows the curves loaded into the display"
@@ -237,7 +237,7 @@ msgstr "Neste bilde"
 
 #: ../data/gcm-viewer.ui.h:44
 msgid "This shows what an image would look like if saved with the profile"
-msgstr ""
+msgstr "Dette viser hva et bilde vil se ut som hvis det blir lagret med profilen"
 
 #: ../data/gcm-viewer.ui.h:45
 msgid "From sRGB"
@@ -245,7 +245,7 @@ msgstr "Fra sRGB"
 
 #: ../data/gcm-viewer.ui.h:46
 msgid "This shows what an image would look like if opened with the profile"
-msgstr ""
+msgstr "Dette viser hva et bilde vil se ut som hvis det åpnes med profilen"
 
 #: ../data/gcm-viewer.ui.h:47
 msgid "To sRGB"
@@ -253,7 +253,7 @@ msgstr "Til sRGB"
 
 #: ../data/gcm-viewer.ui.h:48
 msgid "Named colors are specific colors that are defined in the profile"
-msgstr ""
+msgstr "Navngitte farger er spesifikke farger som defineres i profilen"
 
 #: ../data/gcm-viewer.ui.h:49
 msgid "Named Colors"
@@ -1571,7 +1571,7 @@ msgstr "PNPID for skjerm"
 #. TRANSLATORS: who made the display
 #: ../src/gcm-viewer.c:776
 msgid "Display vendor"
-msgstr ""
+msgstr "Skjermprodusent"
 
 #. TRANSLATORS: the raw profile MD5
 #: ../src/gcm-viewer.c:778
@@ -1581,22 +1581,22 @@ msgstr "Sjekksum for fil"
 #. TRANSLATORS: the color framework, e.g. 'colord'
 #: ../src/gcm-viewer.c:780
 msgid "Framework product"
-msgstr ""
+msgstr "Rammeverksprodukt"
 
 #. TRANSLATORS: the framework binary, e.g. gcm-viewer
 #: ../src/gcm-viewer.c:782
 msgid "Framework program"
-msgstr ""
+msgstr "Program fra rammeverk"
 
 #. TRANSLATORS: the framework release, e.g. '1.22'
 #: ../src/gcm-viewer.c:784
 msgid "Framework version"
-msgstr ""
+msgstr "Versjon for rammeverk"
 
 #. TRANSLATORS: Where the profile data came from, e.g. 'test' or 'standard'
 #: ../src/gcm-viewer.c:786
 msgid "Data source type"
-msgstr ""
+msgstr "Type datakilde"
 
 #. TRANSLATORS: how the qualifier is formatted, e.g. 'ColorSpace.Paper.DPI'
 #: ../src/gcm-viewer.c:788
@@ -1642,7 +1642,7 @@ msgstr ""
 #. TRANSLATORS: e.g. DVI or VGA
 #: ../src/gcm-viewer.c:804
 msgid "Connection type"
-msgstr ""
+msgstr "Tilkoblingstype"
 
 #. TRANSLATORS: if the device has a VCGT profile
 #: ../src/gcm-viewer.c:1058
