Updated Hebrew translation.

--- a/po/he.po
+++ b/po/he.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-06-02 12:56+0300\n"
-"PO-Revision-Date: 2012-06-02 13:03+0200\n"
+"POT-Creation-Date: 2012-07-24 22:48+0300\n"
+"PO-Revision-Date: 2012-07-24 22:53+0200\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Gezer <sh.yaron@gmail.com>\n"
 "Language: \n"
@@ -864,7 +864,6 @@ msgstr "בטרם יצירת פרופיל להתקן, יש לצלם תמונה ב
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1312
-#, fuzzy
 msgid "Ensure that the contrast and brightness are not changed and color correction profiles have not been applied."
 msgstr "יש לוודא כי הניגודיות והבהירות אינן משתנות ושפרופילי תיקון הצבע אינם חלים."
 
@@ -880,15 +879,13 @@ msgstr "יש לוודא שאיזון הבהירות לא השתנה על ידי 
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1325
-#, fuzzy
 msgid "Please select the calibration target type."
-msgstr "נא לבחור שפת יעד תחילה."
+msgstr "נא לבחור את סוג יעד הכיול."
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1328
-#, fuzzy
 msgid "What target type do you have?"
-msgstr "אילו חשבונות יש לך?"
+msgstr "מה סוג היעד שיש לך?"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1360
@@ -938,7 +935,7 @@ msgstr ""
 
 #: ../src/gcm-calibrate-main.c:1494
 msgid "CIE D50 (Printing and publishing)"
-msgstr ""
+msgstr "CIE D50 (הדפסה והפצה)"
 
 #: ../src/gcm-calibrate-main.c:1503
 msgid "CIE D55"
@@ -946,7 +943,7 @@ msgstr "CIE D55"
 
 #: ../src/gcm-calibrate-main.c:1512
 msgid "CIE D65 (Photography and graphics)"
-msgstr ""
+msgstr "CIE D65 (צילום וגרפיקה)"
 
 #: ../src/gcm-calibrate-main.c:1522
 msgid "CIE D75"
@@ -984,7 +981,7 @@ msgstr "נא לבחור את איכות הכיול"
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1674
 msgid "Higher quality calibration requires many color samples and more time."
-msgstr ""
+msgstr "כיול באיכות גבוהה יותר דורש דגימות צבע רבות ויותר זמן."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1678
@@ -1192,15 +1189,13 @@ msgstr "פרופיל ה־ICC כבר מותקן לכלל המערכת"
 
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:234
-#, fuzzy
 msgid "Import display color profile?"
-msgstr "פרופיל צבע להצגה:"
+msgstr "האם לייבא את פרופיל הצבע של התצוגה?"
 
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:238
-#, fuzzy
 msgid "Import device color profile?"
-msgstr "האם לייבא את פרופיל ה־ICC‏ %s?"
+msgstr "האם לייבא את פרופיל הצבע של ההתקן?"
 
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:242
