--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager 2.91.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-09 19:10+0800\n"
-"PO-Revision-Date: 2012-07-07 12:07+0800\n"
-"Last-Translator: Cheng-Chia Tseng <pswo10680@gmail.com>\n"
+"POT-Creation-Date: 2012-08-12 22:55+0800\n"
+"PO-Revision-Date: 2012-08-11 20:11+0800\n"
+"Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
 "Language-Team: Chinese (Taiwan) <zh-l10n@lists.linux.org.tw>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -193,14 +193,12 @@ msgid "3D Gamut"
 msgstr "3D 色域"
 
 #: ../data/gcm-viewer.ui.h:33
-#, fuzzy
 msgid "Response out"
-msgstr "反應"
+msgstr "反應輸出"
 
 #: ../data/gcm-viewer.ui.h:34
-#, fuzzy
 msgid "Response in"
-msgstr "反應"
+msgstr "反應輸入"
 
 #: ../data/gcm-viewer.ui.h:35
 msgid ""
