--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,29 @@
+Version 3.5.90
+~~~~~~~~~~~~~~
+Released: 2012-08-24
+
+* Translations
+ - Added Assamese translation (Nilamdyuti Goswami)
+ - Added Greek help translation (Tom Tryfonidis)
+ - Added Hindi translation (chandankumar)
+ - Added Marathi translation (Sandeep Sheshrao Shedmake)
+ - Updated Chinese simplified translation (Cheng Lu)
+ - Updated Galician translation (Fran Diéguez)
+ - Updated German help translation (Tobias Endrigkeit)
+ - Updated Gujarati Translations (Sweta Kothari)
+ - Updated Hebrew translation (Yaron Shahrabani)
+ - Updated Indonesian translation (Andika Triwidada)
+ - Updated Japanese translation (Ryo Fujita)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Serbian translation (Мирослав Николић)
+ - Updated Traditional Chinese translation (Chao-Hsiung Liao, Cheng-Chia Tseng)
+
+* Bugfix:
+ - Do not use deprecated clutter API (Richard Hughes)
+ - Remove -Werror by default for development builds (Richard Hughes)
+ - Use Yelp tools insted of gnome.doc-utils (Oliver Propst)
+
 Version 3.5.3
 ~~~~~~~~~~~~~
 Released: 2012-06-26
