--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager 2.91.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-12 22:55+0800\n"
-"PO-Revision-Date: 2012-08-12 22:55+0800\n"
-"Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
+"POT-Creation-Date: 2012-08-29 18:04+0800\n"
+"PO-Revision-Date: 2012-08-29 18:04+0800\n"
+"Last-Translator: Cheng-Chia Tseng <pswo10680@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -41,7 +41,7 @@ msgstr "顏色挑選器"
 
 #: ../data/gcm-picker.desktop.in.h:2
 msgid "Use the color sensor to sample spot colors"
-msgstr "使用感測器取樣點色彩"
+msgstr "使用色彩感測器來取樣點色彩"
 
 #. Button text, to get a single sample of color
 #: ../data/gcm-picker.ui.h:4
@@ -103,7 +103,7 @@ msgstr "檢查並比較已安裝的色彩描述檔"
 
 #: ../data/gcm-viewer.ui.h:2
 msgid "Add a profile for the device"
-msgstr "加入裝置的描述檔"
+msgstr "加入這個裝置的描述檔"
 
 #: ../data/gcm-viewer.ui.h:3
 msgid "Remove a profile from the device"
@@ -122,7 +122,7 @@ msgstr "色彩空間"
 #. When the profile was created
 #: ../data/gcm-viewer.ui.h:9
 msgid "Created"
-msgstr "已建立"
+msgstr "建立於"
 
 #. The version of the profile
 #: ../data/gcm-viewer.ui.h:11
@@ -132,7 +132,7 @@ msgstr "版本"
 #. The manufacturer of the profile
 #: ../data/gcm-viewer.ui.h:13
 msgid "Device manufacturer"
-msgstr "製造製造商"
+msgstr "製造商"
 
 #. The manufacturer of the profile
 #: ../data/gcm-viewer.ui.h:15
@@ -178,7 +178,7 @@ msgstr "x"
 
 #: ../data/gcm-viewer.ui.h:29
 msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
-msgstr "CIE 1931 圖表顯示描述檔色域的 2D 呈現樣貌"
+msgstr "CIE 1931 圖表顯示的是描述檔色域的 2D 呈現樣貌"
 
 #: ../data/gcm-viewer.ui.h:30
 msgid "CIE 1931"
@@ -186,7 +186,7 @@ msgstr "CIE 1931"
 
 #: ../data/gcm-viewer.ui.h:31
 msgid "This 3D hull is what the profile looks like in Lab space"
-msgstr "這個 3D 船型圖為描述檔於 Lab 空間下看來的樣貌"
+msgstr "這個 3D 船型圖顯示的是描述檔於 Lab 空間下看來的樣貌"
 
 #: ../data/gcm-viewer.ui.h:32
 msgid "3D Gamut"
@@ -204,7 +204,7 @@ msgstr "反應輸入"
 msgid ""
 "A tone reproduction curve is the mapping of scene luminance to display "
 "luminance"
-msgstr "色調再製曲線為要顯示的亮度其場景亮度的映射"
+msgstr "色調再製曲線顯示的是場景輝度與顯示器輝度之間的映射關係"
 
 #: ../data/gcm-viewer.ui.h:36
 msgid "TRC"
@@ -216,7 +216,7 @@ msgstr "顯示卡輸出"
 
 #: ../data/gcm-viewer.ui.h:38
 msgid "A video card gamma table shows the curves loaded into the display"
-msgstr "顯示卡 Gamma 表顯示該顯示器載入的曲線"
+msgstr "顯示卡 Gamma 表顯示的是該顯示器載入的曲線"
 
 #: ../data/gcm-viewer.ui.h:39
 msgid "VCGT"
@@ -237,7 +237,7 @@ msgstr "下個影像"
 
 #: ../data/gcm-viewer.ui.h:44
 msgid "This shows what an image would look like if saved with the profile"
-msgstr "這會顯示以該描述檔儲存時影像看來會是什麼樣貌"
+msgstr "這顯示的是若以該描述檔儲存影像時看來會是什麼樣貌"
 
 #: ../data/gcm-viewer.ui.h:45
 msgid "From sRGB"
@@ -245,7 +245,7 @@ msgstr "從 sRGB"
 
 #: ../data/gcm-viewer.ui.h:46
 msgid "This shows what an image would look like if opened with the profile"
-msgstr "這會顯示以該描述檔開啟時影像看來會是什麼樣貌"
+msgstr "這顯示的是若以該描述檔開啟影像時看來會是什麼樣貌"
 
 #: ../data/gcm-viewer.ui.h:47
 msgid "To sRGB"
@@ -302,7 +302,7 @@ msgstr "正在產生描述檔"
 
 #: ../src/gcm-calibrate-argyll.c:647
 msgid "Generating the ICC color profile that can be used with this screen."
-msgstr "正在產生用在這個螢幕上的 ICC 色彩描述檔。"
+msgstr "正在產生用於這個螢幕的 ICC 色彩描述檔。"
 
 #: ../src/gcm-calibrate-argyll.c:817
 msgid "Copying files"
@@ -322,7 +322,7 @@ msgstr "正在偵測參考色塊並測量它們。"
 
 #: ../src/gcm-calibrate-argyll.c:1008
 msgid "Generating the ICC color profile that can be used with this device."
-msgstr "產生這個裝置適用的 ICC 色彩描述檔。"
+msgstr "產生這個裝置可適用的 ICC 色彩描述檔。"
 
 #: ../src/gcm-calibrate-argyll.c:1373
 msgid "Printing patches"
@@ -852,17 +852,17 @@ msgstr "CMP DT 003"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1201
 msgid "Color Checker"
-msgstr "顏色檢查程式"
+msgstr "Color Checker"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1205
 msgid "Color Checker DC"
-msgstr "顏色檢查程式 DC"
+msgstr "Color Checker DC"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1209
 msgid "Color Checker SG"
-msgstr "顏色檢查程式 SG"
+msgstr "Color Checker SG"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1213
@@ -872,7 +872,7 @@ msgstr "Hutchcolor"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1217
 msgid "i1 RGB Scan 1.4"
-msgstr "i1 RGB 掃描 1.4"
+msgstr "i1 RGB Scan 1.4"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1221
@@ -916,7 +916,7 @@ msgstr "裝置的感測器應該在掃描前先完成清潔，而輸出檔案的
 msgid ""
 "Ensure that the white-balance has not been modified by the camera and that "
 "the lens is clean."
-msgstr "請確定白平衡沒有被攝影機修改過而鏡頭也是乾淨的。"
+msgstr "請確定白平衡沒有被攝影機修改過，而且鏡頭也是乾淨的。"
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1325
@@ -1502,7 +1502,7 @@ msgstr "標準空間"
 #. TRANSLATORS: the raw EDID MD5 of the display device
 #: ../src/gcm-viewer.c:770
 msgid "Display checksum"
-msgstr "顯示校驗碼"
+msgstr "顯示器校驗碼"
 
 #: ../src/gcm-viewer.c:771
 msgid "Display model"
@@ -1545,7 +1545,7 @@ msgstr "框架版本"
 #. TRANSLATORS: Where the profile data came from, e.g. 'test' or 'standard'
 #: ../src/gcm-viewer.c:786
 msgid "Data source type"
-msgstr "資料類型"
+msgstr "資料來源類型"
 
 #. TRANSLATORS: how the qualifier is formatted, e.g. 'ColorSpace.Paper.DPI'
 #: ../src/gcm-viewer.c:788
@@ -1585,7 +1585,7 @@ msgstr "校準裝置"
 #. TRANSLATORS: screen type e.g. 'glossy' or 'matte'
 #: ../src/gcm-viewer.c:802
 msgid "Screen surface finish"
-msgstr "螢幕表面完成"
+msgstr "螢幕表面拋光"
 
 #. TRANSLATORS: e.g. DVI or VGA
 #: ../src/gcm-viewer.c:804
